# gpr300-sp24-template

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: main.yml
assignments/assignment0/: CMakeLists.txt  main.cpp
assignments/assignment1/: CMakeLists.txt  main.cpp
assignments/assignment1/assets/: blinnphong.frag  blinnphong.vert  blur.frag  chromatic.frag  fullscreen.frag  fullscreen.vert  grayscale.frag  inverse.frag
assignments/worksession0/: CMakeLists.txt  main.cpp
assignments/worksession0/assets/: toon.frag  toon.vert
